# PokemonPocketPedia

./: .env.example  .gitignore  README.md  package-lock.json  project_plan.md  pyproject.toml
.github/workflows/: ci.yml  daily-update.yml
docs/: index.html
docs/reports/2026-02-08/: meta_overview.html  recommendation.galarian-obstagoon-b2-mega-absol-ex-b1.html  recommendation.giratina-ex-a2b-darkrai-ex-a2.html  recommendation.magnezone-b1a-oricorio-a3.html  recommendation.mega-altaria-ex-b1-gourgeist-b2.html  recommendation.mega-altaria-ex-chingling-b1.html  recommendation.mega-altaria-ex-indeedee-ex-b1.html  recommendation.suicune-ex-a4a-greninja-ex-b1.html  (+1 more)
schemas/processed/: README.md  artifact_contracts.json  cards.normalized.schema.json  deck_cards.normalized.schema.json  decks.normalized.schema.json  meta_metrics.list.schema.json  meta_metrics.overview.schema.json  meta_metrics.trends.schema.json  validation.report.schema.json
skill/tcgp-meta-analyst/: SKILL.md
src/pokepocketpedia/: __init__.py  cli.py
tests/: test_analyze_pipeline.py  test_api_routes.py  test_cli_build_site.py  test_cli_recommend.py  test_cli_weekly_report.py  test_common_providers.py  test_health.py  test_ingest_pipeline.py  test_interactive_llm.py  test_interactive_llm_openclaw.py  test_llm_service_anthropic_helpers.py  test_llm_service_openclaw.py  test_meta_overview_report.py  test_normalize_pipeline.py  test_recommend_report_render.py
webapp/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
webapp/src/: App.tsx  styles.css
(+78 files in other folders)
